--- a/style.css
+++ b/style.css
@@ -56,9 +56,11 @@ header {
 }
 
 .banner img {
-  width: 100px;
-  height: 100px;
-  margin-left: 3%;
+  width: 90px;
+  height: 90px;
+  margin-top: 0.5%;
+  margin-left: 4%;
+  margin-right: 2%;
 }
 
 .title {
@@ -75,6 +77,7 @@ h1 a {
   font-family: "belligerent_madnessregular", sans-serif;
   font-size: 40px;
   margin: auto;
+  color: #B36E99;
 }
 
 .title p {
@@ -96,9 +99,8 @@ ul li {
 }
 
 ul a:hover {
-  text-decoration: underline #B36E99;
   color: #B36E99;
-  opacity: 0.7;
+  opacity: 0.65;
 }
 
 nav {
@@ -118,7 +120,7 @@ nav {
 }
 
 #cart_svg:hover {
-  opacity: 0.7;
+  opacity: 0.65;
 }
 
 /*section*/
@@ -433,18 +435,6 @@ label {
   padding-left: 6%;
 }
 
-.adress {
-  margin-bottom: 3%;
-  padding-top: 2%;
-  padding-bottom: 4%;
-  background-color: #CFD8DC;
-  box-shadow: 1px 1px 10px 1px #BDBDBD;
-  border-radius: 10px;
-}
-.adress p {
-  padding-left: 6%;
-}
-
 #valid_order {
   margin: auto;
   display: block;
@@ -498,18 +488,28 @@ input {
 #confirm p {
   text-align: center;
   font-size: 16px;
-  margin-bottom: 10%;
+  margin-bottom: 4%;
+  padding-left: 2%;
+  padding-right: 2%;
 }
 
 #return_order {
   margin: auto;
   display: block;
-  border-radius: 5px;
+  border-radius: 25px;
   color: #F3E9F1;
   font-size: 16px;
   margin-bottom: 2%;
   padding: 0.25rem 1rem 0.4rem 1rem;
   border: 0.5px solid #757575;
+}
+
+#icone_bear {
+  display: block;
+  width: 60px;
+  height: 60px;
+  margin: auto;
+  margin-bottom: 5%;
 }
 
 @media screen and (min-width: 400px) {
@@ -791,6 +791,11 @@ input {
     text-align: right;
     margin-right: 1%;
   }
+
+  #icone_bear {
+    width: 80px;
+    height: 80px;
+  }
 }
 @media screen and (min-width: 850px) {
   /*header*/
@@ -930,11 +935,19 @@ input {
   #confirm h2 {
     text-align: center;
     font-size: 30px;
+    margin-top: 10%;
   }
 
   #confirm p {
     text-align: center;
     font-size: 20px;
+    padding-left: 3%;
+    padding-right: 3%;
+  }
+
+  #icone_bear {
+    width: 100px;
+    height: 100px;
   }
 }
 @media screen and (min-width: 1000px) {
@@ -1036,12 +1049,12 @@ input {
   }
 
   #quantity_cart {
-    width: 50px;
+    width: 70px;
     text-align: right;
   }
 
   #price_cart {
-    width: 50px;
+    width: 70px;
     text-align: right;
     margin-right: 1%;
   }
@@ -1049,14 +1062,24 @@ input {
   #confirm h2 {
     text-align: center;
     font-size: 35px;
+    margin-top: 5%;
   }
 
   #confirm p {
     text-align: center;
     font-size: 20px;
+    padding-left: 3.5%;
+    padding-right: 3.5%;
+    margin-bottom: 2%;
+  }
+
+  #icone_bear {
+    width: 120px;
+    height: 120px;
+    margin-bottom: 2%;
   }
 }
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 1100px) {
   #article_cart {
     width: 280px;
     text-align: right;
