--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -931,7 +931,7 @@
             font-size: 18px;
         }
     
-        input[type="button" i]{
+        input[type="button"]{
             font-size: 24px;
             margin-top: 8%;
             margin-bottom: 3%;
@@ -1090,7 +1090,7 @@
             }
         }
     
-        input[type="submit" i]{
+        input[type="submit"]{
             padding-bottom: 1%;
         }
     
